# thesis-forecasting

./: README.md  environment.yml  pyproject.toml
body/: 01-introduction.md  04-stations_kmeans.md  05-time_series_analysis.md  06-forecasting.md  _config.yml  _toc.yml  conclusions.md  frontmatter.md  references.md  tesi.bib
body/_build/.doctrees/: 01-introduction.doctree  05-time_series_analysis.doctree  06-forecasting.doctree  conclusions.doctree  environment.pickle  frontmatter.doctree  references.doctree
body/_build/jupyter_execute/: 01-introduction.ipynb  01-introduction.py  02-bikesharing_and_bikemi.ipynb  04-stations_kmeans.py  05-time_series_analysis.ipynb  05-time_series_analysis.py  06-forecasting.ipynb  06-forecasting.py  06-forecasting.txt
body/_build/latex/: thesis-bike_sharing_forecasting.aux  thesis-bike_sharing_forecasting.fdb_latexmk  (+4 more)
data/queries/: clusters-materialized_view-daily_rentals.sql  materialized_view-clusters-daily_rentals.sql  materialized_view-clusters-hourly_rentals-improved.sql  materialized_view-clusters-hourly_rentals.sql  materialized_view-daily_rentals_before_2019.sql  materialized_view-hourly_rentals_before_2019.sql  view-before_2019-rentals.sql
notebooks/: 01-introduction.ipynb  05-time_series_analysis.ipynb  06-forecasting.ipynb  06-unvariate_tsa.ipynb  07-random_forest.ipynb
scripts/: add-clusters-to-postgres  add-stalls-to-postgres  add_clusters_to_postgres  add_stalls_to_postgres  clean-headers  from-csv-to-postgres  from-excel-to-postgres  get-milan-data  make-journal-entry  pg-server-status  trust-notebooks
