[project]
name = ""
version = ""
description = ""
authors = [
    {name = "baggiponte", email = "lucabaggi.uni@gmail.com"},
]
dependencies = [
    "geopandas",
    "pandas",
    "seaborn",
    "matplotlib",
    "contextily",
    "psycopg2",
    "scikit-learn",
    "rich",
    "statsmodels",
    "pmdarima",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
